# yys_auto_script

./: README.md  pyproject.toml  update_logs.md
backup/src_3.17/: main.py  mainGUI.py  mainSRC.py  t.py
src/: main.py  main.spec  mainGUI.py  mainSRC.py
src/conf/: config.json
test/: logic.py  main.py  ocr.py  view.py
