[project]
name = "yys-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.19.0",
    "pyscreeze>=1.0.1",
    "pyside6>=6.10.2",
]
